--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "baseHref": "https://sym3ioz.github.io/screenlovers/",
+            "baseHref": "./",
             "outputPath": "docs",
             "index": "src/index.html",
             "main": "src/main.ts",
